corrigindo bug nas imagens

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
     <h3>Faça sua escolha:</h3>
     <div id="opcoes">
       <div class="background-opcoes">
-        <input type="image" src="/imgs/pedra.png" id="pedra"></input>
+        <input type="image" src="imgs/pedra.png" id="pedra"></input>
       </div>
       <div class="background-opcoes">
-        <input type="image" src="/imgs/papel.png" id="papel"></input>
+        <input type="image" src="imgs/papel.png" id="papel"></input>
       </div>
       <div class="background-opcoes">
-        <input type="image" src="/imgs/tesoura.png" id="tesoura"></input>
+        <input type="image" src="imgs/tesoura.png" id="tesoura"></input>
       </div>
     </div>
     <div id="escolhas">
